Fixed spacing in footer components and tweaked anchor styling

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -34,7 +34,12 @@ footer {
             font-family: sans-serif;
             font-size: 0.8em;
             font-variant: small-caps;
-            padding: 0.25em 6px 1em 6px;
+            margin: 0;
+            padding: 6px;
+        }
+        & > .content-container {
+            margin: 0;
+            padding: 0;
         }
     }
 }
